Article truncating fix

--- a/Linerath-Blog.Web/Content/Site.css
+++ b/Linerath-Blog.Web/Content/Site.css
@@ -170,8 +170,9 @@ input.search {
 
 .comments-section {
     background-color: #f5f5f5;
-    margin-top: 40px;
+    margin-top: 20px;
     padding: 5px 15px 5px 15px !important;
+    /*min-height: 200px;*/
 }
 
 .goodreads {
@@ -234,7 +235,7 @@ nav {
     border-radius: var(--border-radius);
     padding: 5px 15px 5px 15px !important;
     max-width: none !important;
-    height: 100%;
+    min-height: 166px;
 }
 
 .container-fluid {
